--- a/scss/_info.scss
+++ b/scss/_info.scss
@@ -35,9 +35,9 @@
 
     @media (min-width: $screen-sm-min) {
       height: 468px;
-      width: 861px;
+      width: 705px;
       background-image: url(../assets/kompozycja1.png);
-      background-position: 123px 73px;
+      margin: 74px auto 0 auto;
     }
 
   }
