--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -9,3 +9,4 @@ $nav_border: #e5e5e5;
 }
 
 $screen-sm-min: 768px;
+$screen-md-min: 992px;
